Handle 'any' patterns
Fixes https://github.com/google/google-java-format/issues/1037

PiperOrigin-RevId: 606394473